# scout-mib-browser

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
.sandcastle/: .env.example  Containerfile  main.mts  prompt.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/specs/: 2026-07-13-scout-mib-browser-design.md  2026-07-15-scout-mib-browser-rust-tauri-design.md
scripts/: check.sh
src/: app.css  index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/mib/: fallback.rs  loader.rs  mod.rs
src-tauri/src/snmp/: engine.rs  mock.rs  mod.rs  tolerant.rs  types.rs
src/css/: style.css
src/js/: app.js
src/lib/: stores.ts  tauriCommands.ts  types.ts
src/lib/components/: AddressBar.svelte  AppShell.svelte  ConnectionModal.svelte  ContextMenu.svelte  MIBPanel.svelte  MainContent.svelte  ManageMibsDialog.svelte  MenuBar.svelte  ResultsPane.svelte  SelectionInfo.svelte  TargetBar.svelte  TreeNode.svelte
