[package]
name = "scout-mib-browser"
version = "0.1.0"
description = "An SNMP MIB browser with high tolerance for malformed responses"
edition = "2021"
license = "MIT"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snmp2 = { version = "0.5", features = ["v3"] }
mib-rs = "0.8"
config = "0.14"
dirs = "5"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
regex = "1"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
